css/Volcano.css
/* Style for a bordered image */
.img-bordered {
  border:7px solid #007bff;
  background-color: black;
}

/* Style for positioning stuff over container */
/* Container needed to position the button. Adjust the width as needed */
.container-new {
  position: relative;
}

/* Make the image responsive */
.container-new img {
  width: 100%;
  height: auto;
}

/* Style the button and place it in the middle of the container/image */
.container-new .btn1 {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
}

/* Style the button and place it in the middle of the container/image */
.container-new .btn2 {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(100%, -50%);
  -ms-transform: translate(100%, -50%);
}

/* Style the button and place it in the middle of the container/image */
.container-new .btn3 {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(300%, -50%);
  -ms-transform: translate(300%, -50%);
}

.container-new .btn:hover {
  background-color: black;
}

.nav_title {
  color: white;
  margin-right: 15px;
}

.vg_navbar{
  margin-bottom: 10px;
  z-index: 6;
}

/* Sticky footer styles
-------------------------------------------------- */
html {
  position: relative;
  min-height: 100%;
}
body {
  /* Margin bottom by footer height */
  margin-bottom: 60px;
}
.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 60px;
  line-height: 60px; /* Vertically center the text there */
  background-color: #f5f5f5;
}

